--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,21 @@
 [submodule "./vendor/github.com/bwmarrin/discordgo"]
-	path = ./vendor/github.com/bwmarrin/discordgo
+	path = ./vendor/github.com/bwmarrin/discordgo.git
 	url = https://github.com/bwmarrin/discordgo
 [submodule "./vendor/github.com/bwmarrin/snowflake"]
-	path = ./vendor/github.com/bwmarrin/snowflake
+	path = ./vendor/github.com/bwmarrin/snowflake.git
 	url = https://github.com/bwmarrin/snowflake
 [submodule "./vendor/github.com/go-sql-driver/mysql"]
-	path = ./vendor/github.com/go-sql-driver/mysql
+	path = ./vendor/github.com/go-sql-driver/mysql.git
 	url = https://github.com/go-sql-driver/mysql
 [submodule "./vendor/github.com/gorilla/websocket"]
-	path = ./vendor/github.com/gorilla/websocket
+	path = ./vendor/github.com/gorilla/websocket.git
 	url = https://github.com/gorilla/websocket
 [submodule "./vendor/github.com/mattn/go-sqlite3"]
-	path = ./vendor/github.com/mattn/go-sqlite3
+	path = ./vendor/github.com/mattn/go-sqlite3.git
 	url = https://github.com/mattn/go-sqlite3
 [submodule "./vendor/github.com/op/go-logging"]
-	path = ./vendor/github.com/op/go-logging
+	path = ./vendor/github.com/op/go-logging.git
 	url = https://github.com/op/go-logging
 [submodule "./vendor/gopkg.in/yaml.v2"]
-	path = ./vendor/gopkg.in/yaml.v2
+	path = ./vendor/gopkg.in/yaml.v2.git
 	url = https://gopkg.in/yaml.v2
