--- a/.gitmodules
+++ b/.gitmodules
@@ -19,6 +19,9 @@
 [submodule "vendor/gopkg.in/yaml.v2"]
 	path = vendor/gopkg.in/yaml.v2
 	url = https://gopkg.in/yaml.v2.git
+[submodule "vvendor/github.com/generaltso/vibrant"]
+	path = vendor/github.com/generaltso/vibrant
+	url = https://github.com/generaltso/vibrant
 [submodule "vendor/github.com/generaltso/sadbox"]
 	path = vendor/github.com/generaltso/sadbox
 	url = https://github.com/generaltso/sadbox
