--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,12 @@ addons:
 script:
   - bash ./ci/travis.sh
 
-before_install:
-  - openssl aes-256-cbc -K $encrypted_37839d6e8267_key -iv $encrypted_37839d6e8267_iv
-    -in ./ci/deploy_rsa.enc -out deploy_rsa -d
-  - eval "$(ssh-agent -s)"
-  - chmod 600 deploy_rsa
-  - ssh-add deploy_rsa
+# before_install:
+#   - openssl aes-256-cbc -K $encrypted_37839d6e8267_key -iv $encrypted_37839d6e8267_iv
+#     -in ./ci/deploy_rsa.enc -out deploy_rsa -d
+#   - eval "$(ssh-agent -s)"
+#   - chmod 600 deploy_rsa
+#   - ssh-add deploy_rsa
 
 after_success: |
   if [ -n "$GITHUB_TOKEN" ]; then
@@ -27,12 +27,6 @@ after_success: |
     git -C ./shinpuru.wiki add .
     git -C ./shinpuru.wiki -c user.name="travis" -c user.email="travis" commit -m "automatically updated commands list"
     git -C ./shinpuru.wiki push
-  fi
-  if [ "$TRAVIS_BRANCH" == "dev" ]; then
-    ssh mgr@zekro.de bash updateShinpuruCanary
-  fi
-  if [ ! -z $TRAVIS_TAG ]; then
-    ssh mgr@zekro.de bash updateShinpuru $TRAVIS_TAG
   fi
 
 deploy:
