--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "4.2.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "dateformat": "^3.0.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
