--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,12 @@ go_import_path: github.com/zekroTJA/shinpuru
 addons:
   ssh_known_hosts: zekro.de
 
+services:
+  - docker
+
 script:
-  - bash ./ci/travis.sh
+  - bash ./ci/build.sh
+  - bash ./ci/docker-release.sh
 
 # before_install:
 #   - openssl aes-256-cbc -K $encrypted_37839d6e8267_key -iv $encrypted_37839d6e8267_iv
@@ -21,7 +25,7 @@ script:
 #   - ssh-add deploy_rsa
 
 after_success: |
-  if [ -n "$GITHUB_TOKEN" ]; then
+  if [ -n "$GITHUB_TOKEN" ] && [ "$TRAVIS_BRANCH" == "dev" ]; then
     git clone https://zekroTJA:$GITHUB_TOKEN@github.com/zekroTJA/shinpuru.wiki.git
     mv docs/commandsManual.md shinpuru.wiki/Commands.md
     git -C ./shinpuru.wiki add .
