--- a/.travis.yml
+++ b/.travis.yml
@@ -24,22 +24,22 @@ before_install:
   - chmod 600 deploy_rsa
   - ssh-add deploy_rsa
 
-after_success: |
-  if [ -n "$GITHUB_TOKEN" ] && [ "$TRAVIS_BRANCH" == "dev" ]; then
-    git clone https://zekroTJA:$GITHUB_TOKEN@github.com/zekroTJA/shinpuru.wiki.git
-    mv docs/commandsManual.md shinpuru.wiki/Commands.md
-    git -C ./shinpuru.wiki add .
-    git -C ./shinpuru.wiki -c user.name="travis" -c user.email="travis" commit -m "automatically updated commands list"
-    git -C ./shinpuru.wiki push
-  fi
+# after_success: |
+#   if [ -n "$GITHUB_TOKEN" ] && [ "$TRAVIS_BRANCH" == "dev" ]; then
+#     git clone https://zekroTJA:$GITHUB_TOKEN@github.com/zekroTJA/shinpuru.wiki.git
+#     mv docs/commandsManual.md shinpuru.wiki/Commands.md
+#     git -C ./shinpuru.wiki add .
+#     git -C ./shinpuru.wiki -c user.name="travis" -c user.email="travis" commit -m "automatically updated commands list"
+#     git -C ./shinpuru.wiki push
+#   fi
 
-  if [ "$TRAVIS_BRANCH" == "dev" ]; then
-    ssh mgr@zekro.de \
-      "cd docker &&\
-      docker-compose stop shinpuru-canary &&\
-      docker-compose pull shinpuru-canary &&\ 
-      docker-compose up -d shinpuru-canary"
-  fi
+#   if [ "$TRAVIS_BRANCH" == "dev" ]; then
+#     ssh mgr@zekro.de \
+#       "cd docker &&\
+#       docker-compose stop shinpuru-canary &&\
+#       docker-compose pull shinpuru-canary &&\ 
+#       docker-compose up -d shinpuru-canary"
+#   fi
 
 deploy:
   provider: releases
