update docker CD configs

--- a/.github/workflows/docker-cd-dev.yml
+++ b/.github/workflows/docker-cd-dev.yml
@@ -1,12 +1,9 @@
-name: Docker CD
+name: Docker CD Canary
 
 on:
   push:
     branches:
-      - master
       - dev
-    tags:
-      - '*'
 
 jobs:
 
@@ -17,10 +14,14 @@ jobs:
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Build and Publish Docker Image
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
-          bash ./ci/docker-release.sh
+          docker build . -t zekro/shinpuru:canary
+          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+          docker push zekro/shinpuru:canary
