--- a/.github/workflows/releases-cd.yml
+++ b/.github/workflows/releases-cd.yml
@@ -40,5 +40,5 @@ jobs:
             -a ./deploy/build_assets.tar.gz
             -a ./deploy/md5sum.txt
             -a ./deploy/sha256sum.txt
-            -m "$(git describe --tags --abbrev=0)"
+            -f ./CHANGELOG.md
             $(git describe --tags --abbrev=0)'
