--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
     "dateformat": "^3.0.3",
+    "ngx-markdown": "^9.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
