--- a/.github/workflows/tests-ci.yml
+++ b/.github/workflows/tests-ci.yml
@@ -13,8 +13,13 @@ jobs:
 
     name: Tests
     runs-on: ubuntu-latest
-    with:
-      go-version: 1.14
+
+    steps:
+
+    - name: Set up Go
+      uses: actions/setup-go@v1
+      with:
+        go-version: 1.14
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
