--- a/.github/workflows/docker-cd-tag.yml
+++ b/.github/workflows/docker-cd-tag.yml
@@ -18,7 +18,7 @@ jobs:
           fetch-depth: 0
 
       - name: Set env
-        run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       - name: Build and Publish Docker Image
         env:
