--- a/web/package.json
+++ b/web/package.json
@@ -20,11 +20,11 @@
     "@angular/platform-browser": "~10.2.4",
     "@angular/platform-browser-dynamic": "~10.2.4",
     "@angular/router": "~10.2.4",
-    "@ng-bootstrap/ng-bootstrap": "6.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
     "dateformat": "^3.0.3",
-    "ngx-markdown": "^9.1.1",
+    "ngx-markdown": "^10.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -37,7 +37,7 @@
     "@types/jasmine": "~3.5.7",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^6.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
