--- a/config/config.example.yaml
+++ b/config/config.example.yaml
@@ -165,3 +165,15 @@ metrics:
   # to. This is defaultly ":9091" if not
   # specified
   addr: ":9091"
+
+# Time Schedule specifications.
+# Time schedules are specified using the crontab
+# syntax:
+#   second minute hour month dom dow
+# Read this to get more information:
+# https://pkg.go.dev/github.com/robfig/cron/v3#hdr-Usage
+schedules:
+  # Guild backup schedule
+  guildbackups:        '0 0 6 * * *'
+  # Refresh token cleanup schedule
+  refreshtokencleanup: '0 0 5 * * *'
