--- a/.github/workflows/docker-cd.yml
+++ b/.github/workflows/docker-cd.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Populate info embeds
+        run: bash ./scripts/populateinfo.sh
+
       - name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
