--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,21 @@
 version: '3'
 
 services:
-
   traefik:
-    image: "traefik:v2.2"
+    image: 'traefik:v2.2'
     command:
-      - "--providers.docker"
-      - "--providers.file.directory=/etc/traefik/dynamic_conf"
-      - "--entrypoints.http.address=:80"
-      - "--entrypoints.https.address=:443"
-      - "--providers.docker.exposedByDefault=false"
+      - '--providers.docker'
+      - '--providers.file.directory=/etc/traefik/dynamic_conf'
+      - '--entrypoints.http.address=:80'
+      - '--entrypoints.https.address=:443'
+      - '--providers.docker.exposedByDefault=false'
     ports:
-      - "80:80"
-      - "443:443"
+      - '80:80'
+      - '443:443'
     volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock"
-      - "./traefik/config:/etc/traefik/dynamic_conf"
-      - "/etc/cert:/etc/cert:ro"
+      - '/var/run/docker.sock:/var/run/docker.sock'
+      - './traefik/config:/etc/traefik/dynamic_conf'
+      - '/etc/cert:/etc/cert:ro'
 
   minio:
     image: 'minio/minio:latest'
@@ -25,9 +24,9 @@ services:
     volumes:
       - './minio/data:/data'
     environment:
-      MINIO_ACCESS_KEY:    'minio_access_key'
-      MINIO_SECRET_KEY:    'minio_secret_key'
-      MINIO_REGION_NAME:   'us-east-1'
+      MINIO_ACCESS_KEY: 'minio_access_key'
+      MINIO_SECRET_KEY: 'minio_secret_key'
+      MINIO_REGION_NAME: 'us-east-1'
     command: server /data # --certs-dir /etc/cert
     restart: always
 
@@ -58,10 +57,10 @@ services:
       - '8080'
     restart: always
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.shinpuru.entrypoints=https"
-      - "traefik.http.routers.shinpuru.tls=true"
-      - "traefik.http.routers.shinpuru.rule=Host(`example.com`)"
+      - 'traefik.enable=true'
+      - 'traefik.http.routers.shinpuru.entrypoints=https'
+      - 'traefik.http.routers.shinpuru.tls=true'
+      - 'traefik.http.routers.shinpuru.rule=Host(`example.com`)'
 
   ###############################################################################
   # The following two services are only important if
@@ -69,20 +68,20 @@ services:
   # instance using prometheus and grafana.
 
   prometheus:
-    image: "prom/prometheus:latest"
+    image: 'prom/prometheus:latest'
     expose:
-      - "9090"
+      - '9090'
     volumes:
       # Change this if you want to use another prometheus config.
-      - "./config/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml"
+      - './config/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml'
     restart: always
 
   grafana:
-    image: "grafana/grafana"
+    image: 'grafana/grafana'
     expose:
-      - "3000"
+      - '3000'
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.grafana.entrypoints=https"
-      - "traefik.http.routers.grafana.tls=true"
-      - "traefik.http.routers.grafana.rule=Host(`grafana.example.com`)"
+      - 'traefik.enable=true'
+      - 'traefik.http.routers.grafana.entrypoints=https'
+      - 'traefik.http.routers.grafana.tls=true'
+      - 'traefik.http.routers.grafana.rule=Host(`grafana.example.com`)'
