implement logging for report expiring errors [#246]

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -34,6 +34,7 @@ services:
     volumes:
       - 'mysql-cfg:/etc/mysql'
       - 'mysql-lib:/var/lib/mysql'
+      - '/etc/localtime:/etc/localtime:ro'
     restart: 'unless-stopped'
 
   phpmyadmin:
