--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
-    "dateformat": "^3.0.3",
+    "date-fns": "^2.22.1",
     "ngx-markdown": "^11.1.2",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
