--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,10 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.go]
+indent_size = 4
+indent_style = tab
+
 [*.md]
 trim_trailing_whitespace = false
 insert_final_newline = false
