--- a/.github/workflows/docker-cd.yml
+++ b/.github/workflows/docker-cd.yml
@@ -12,19 +12,17 @@ on:
 
 jobs:
   build:
-    
     runs-on: ubuntu-latest
 
     steps:
-    
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Populate info embeds
-        run: bash ./scripts/populateinfo.sh
+        run: bash ./ci/populateinfo.sh
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -35,13 +33,13 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-    
+
       - if: startsWith(github.ref, 'refs/heads/master')
         run: echo "TAG=latest" >> $GITHUB_ENV
 
       - if: startsWith(github.ref, 'refs/heads/dev')
         run: echo "TAG=canary" >> $GITHUB_ENV
-        
+
       - if: startsWith(github.ref, 'refs/tags')
         run: |
           echo "TAG=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
