--- a/.github/ISSUE_TEMPLATE/documentation.yml
+++ b/.github/ISSUE_TEMPLATE/documentation.yml
@@ -22,7 +22,7 @@ body:
   - type: textarea
     id: attachments
     attributes:
-      label: attachments
+      label: Attachments
       description: Here you can append images, sketches or other stuff related to the documentation issue.
     validations:
       required: false
