--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,18 +1,18 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Launch",
-            "type": "go",
-            "request": "launch",
-            "mode": "auto",
-            "program": "${workspaceFolder}/cmd/shinpuru",
-            "cwd": "../..",
-            "env": {},
-            "args": ["-c", "config/private.config.yml"]
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Launch",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "${workspaceFolder}/cmd/shinpuru",
+      "cwd": "${workspaceFolder}",
+      "env": {},
+      "args": ["-c", "config/private.config.yml"]
+    }
+  ]
 }
