--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.5.0",
     "core-js": "^3.6.4",
     "date-fns": "^2.22.1",
+    "ng-hcaptcha": "^1.2.0",
     "ngx-markdown": "^12.0.1",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
