--- a/.github/workflows/artifacts-cd.yml
+++ b/.github/workflows/artifacts-cd.yml
@@ -51,6 +51,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Get dependencies
         run: go get -v ./...
+      - name: Populate info embeds
+        run: bash ./ci/populateinfo.sh
       - name: Build Backend (${{ matrix.goos }}-${{ matrix.goarch }})
         env:
           GOOS: ${{ matrix.goos }}
