--- a/.github/workflows/releases-cd.yml
+++ b/.github/workflows/releases-cd.yml
@@ -33,7 +33,6 @@ jobs:
           path: bin/
           retention-days: 1
 
-
   backend:
     name: Build Backend Artifacts
     runs-on: ubuntu-latest
@@ -72,4 +71,40 @@ jobs:
         with:
           name: backend
           path: bin/
+          retention-days: 1
+
+  deploy:
+    name: Deploy to Releases
+    runs-on: ubuntu-latest
+    needs:
+      - "frontend"
+      - "backend"
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Retrieve backend binaries
+        uses: actions/download-artifact@v2
+        with:
+          name: backend
+          path: bin/final/
+      - name: Retrieve frontend binaries
+        uses: actions/download-artifact@v2
+        with:
+          name: frontend
+          path: bin/final/
+      - name: Inject Version into Changelog
+        run: |-
+           sed -i "s/\[VERSION\]/$(git describe --tags --abbrev=0)/g" CHANGELOG.md
+      - name: Generate Checksums
+        working-directory: bin/final/
+        run: |-
+          md5sum * | tee ../md5sum.txt
+          sha256sum * | tee ../sha256sum.txt
+          mv ../md5sum.txt ./
+          mv ../sha256sum.txt ./
+      - name: Upload Artifcats
+        uses: actions/upload-artifact@v2
+        with:
+          name: final-test
+          path: bin/final/
           retention-days: 1
