--- a/web/package.json
+++ b/web/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.10",
-    "@angular/cli": "~12.2.10",
+    "@angular/cli": "^12.2.15",
     "@angular/compiler-cli": "~12.2.10",
     "@angular/language-service": "~12.2.10",
     "@types/jasmine": "~3.6.0",
