--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,8 +13,10 @@ name: "CodeQL"
 
 on:
   workflow_dispatch:
-#   push:
-#     branches: [ master ]
+  push:
+    branches: 
+      - master
+      - dev
 #   pull_request:
 #     # The branches below must be a subset of the branches above
 #     branches: [ master ]
