--- a/.github/workflows/artifacts-cd.yml
+++ b/.github/workflows/artifacts-cd.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v1
         with:
-          go-version: "^1.17"
+          go-version: "1.18beta1"
       - name: Check out code
         uses: actions/checkout@v2
       - name: Get dependencies
