--- a/.github/workflows/releases-cd.yml
+++ b/.github/workflows/releases-cd.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v1
         with:
-          go-version: "^1.18beta1"
+          go-version: "1.18beta1"
       - name: Check out code
         uses: actions/checkout@v2
       - name: Get dependencies
