--- a/.github/workflows/tests-ci.yml
+++ b/.github/workflows/tests-ci.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v1
         with:
-          go-version: ^1.18beta1
+          go-version: 1.18beta1
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
