--- a/.github/workflows/artifacts-cd.yml
+++ b/.github/workflows/artifacts-cd.yml
@@ -32,7 +32,6 @@ jobs:
           name: webpackage
           path: bin/
 
-
   backend:
     name: Build Backend Artifacts
     runs-on: ubuntu-latest
@@ -49,7 +48,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v1
         with:
-          go-version: "1.18beta2"
+          go-version: '1.18rc1'
       - name: Check out code
         uses: actions/checkout@v2
       - name: Get dependencies
