--- a/.github/workflows/releases-cd.yml
+++ b/.github/workflows/releases-cd.yml
@@ -7,7 +7,6 @@ on:
       - '*'
 
 jobs:
-
   frontend:
     name: Build Frontend Artifacts
     runs-on: ubuntu-latest
@@ -47,7 +46,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v1
         with:
-          go-version: "1.18beta2"
+          go-version: '1.18rc1'
       - name: Check out code
         uses: actions/checkout@v2
       - name: Get dependencies
@@ -75,8 +74,8 @@ jobs:
     name: Deploy to Releases
     runs-on: ubuntu-latest
     needs:
-      - "frontend"
-      - "backend"
+      - 'frontend'
+      - 'backend'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -92,7 +91,7 @@ jobs:
           path: bin/source/
       - name: Inject Version into Changelog
         run: |-
-           sed -i "s/\[VERSION\]/$(git describe --tags --abbrev=0)/g" CHANGELOG.md
+          sed -i "s/\[VERSION\]/$(git describe --tags --abbrev=0)/g" CHANGELOG.md
       - name: Bundle Artifacts
         working-directory: bin/source/
         run: |-
@@ -112,8 +111,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: 'hub release create
-            -a ./bin/final/build_assets.tar.gz
-            -a ./bin/final/md5sum.txt
-            -a ./bin/final/sha256sum.txt
-            -F ./CHANGELOG.md
-            $(git describe --tags --abbrev=0)'
+          -a ./bin/final/build_assets.tar.gz
+          -a ./bin/final/md5sum.txt
+          -a ./bin/final/sha256sum.txt
+          -F ./CHANGELOG.md
+          $(git describe --tags --abbrev=0)'
