--- a/.github/workflows/artifacts-cd.yml
+++ b/.github/workflows/artifacts-cd.yml
@@ -35,6 +35,8 @@ jobs:
   backend:
     name: Build Backend Artifacts
     runs-on: ubuntu-latest
+    needs:
+      - frontend
     strategy:
       matrix:
         goos:
@@ -51,6 +53,11 @@ jobs:
           go-version: '1.18rc1'
       - name: Check out code
         uses: actions/checkout@v2
+      - name: Retrieve frontend files
+        uses: actions/download-artifact@v2
+        with:
+          name: frontend
+          path: internal/util/embedded/webdist
       - name: Get dependencies
         run: go get -v ./...
       - name: Populate info embeds
